project(td2)

add_executable(exo1_1 1.1.cc 1.1.main.cc 1.1.test.cc)
add_executable(exo1_2 1.1.cc 1.2.main.cc)

add_executable(exo2_1 2.1.cc 2.1.test.cc)
add_executable(exo2_2 2.2.cc 2.2.test.cc)
add_executable(exo2_4 2.4.cc 2.4.test.cc)
add_executable(exo2_5 2.5.cc 2.5.test.cc)
add_executable(exo2_6 2.6.cc 2.6.test.cc)

add_executable(exo3_1 3.1.cc)
add_executable(exo3_2 3.2.cc 3.2.test.cc)
add_executable(exo3_3 3.3.cc)