cmake_minimum_required(VERSION 3.20)

project(td7)

set(CMAKE_CXX_STANDARD 11)


add_executable(exo31 3.1.h 3.1.cc 3.1.test.cc)
add_executable(exo320 3.2.h 3.2.cc 3.2.test0.cc )
add_executable(exo321 3.2.h 3.2.cc 3.2.test1.cc )
add_executable(exo322 3.2.h 3.2.cc 3.2.test2.cc )
add_executable(exo33 3.3.h 3.3.cc 3.3.test.cc)
add_executable(exo34 3.4.h 3.4.cc 3.4.test.cc)